--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
-[submodule "test_lib/bats-core"]
-	path = test_lib/bats-core
+[submodule "bats-core"]
+	path = test/bin/bats-core
 	url = https://github.com/bats-core/bats-core
-[submodule "test_lib/bats-support"]
-	path = test_lib/bats-support
+[submodule "bats-support"]
+	path = test/bin/bats-support
 	url = https://github.com/ztombol/bats-support
-[submodule "test_lib/bats-assert"]
-	path = test_lib/bats-assert
+[submodule "bats-assert"]
+	path = test/bin/bats-assert
 	url = https://github.com/ztombol/bats-assert
-[submodule "test_lib/bats-file"]
-	path = test_lib/bats-file
+[submodule "bats-file"]
+	path = test/bin/bats-file
 	url = https://github.com/ztombol/bats-file
