--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = bin/bats-file
 	url = https://github.com/bats-core/bats-file
 	branch = tags/v0.3.0
+[submodule "bin/composure"]
+	path = bin/composure
+	url = git@github.com:erichs/composure.git
