Fix modules for bats-core

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "bin/bats-core"]
 	path = bin/bats-core
-	url = https://github.com/bats-core/bats-core.git
+	url = https://github.com/bats-core/bats-core
 [submodule "bin/bats-support"]
 	path = bin/bats-support
 	url = https://github.com/bats-core/bats-support
@@ -12,7 +12,7 @@
 	url = https://github.com/bats-core/bats-file
 [submodule "bin/composure"]
 	path = bin/composure
-	url = git@github.com:erichs/composure.git
+	url = https://github.com/berichs/composure
 [submodule "bin/preexec"]
 	path = bin/preexec
 	url = https://github.com/rcaloras/bash-preexec
