--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "components"]
 	path = components
 	url = https://github.com/ahmadassaf/gaudi-bash-components
+[submodule "bin/bats-core"]
+	path = bin/bats-core
+	url = https://github.com/bats-core/bats-core
