--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "bin/bats-file"]
 	path = bin/bats-file
 	url = https://github.com/bats-core/bats-file
+[submodule "bin/bats-support"]
+	path = bin/bats-support
+	url = https://github.com/bats-core/bats-support
