--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,7 @@
 [submodule "components"]
 	path = components
 	url = https://github.com/ahmadassaf/gaudi-bash-components
+	branch = master
 [submodule "bin/bats-core"]
 	path = bin/bats-core
 	url = https://github.com/bats-core/bats-core
