--- a/.editorconfig
+++ b/.editorconfig
@@ -5,11 +5,32 @@ indent_style = space
 indent_size = 2
 end_of_line = lf
 charset = utf-8
+
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.md]
+[**.{md,rst}]
 trim_trailing_whitespace = false
 
 [.git*]
+indent_size = tab
 indent_style = tab
+
+[{**.*sh,test/run,**.bats}]
+indent_size = tab
+indent_style = tab
+
+shell_variant      = bash
+binary_next_line   = true  # like -bn
+switch_case_indent = true  # like -ci
+space_redirects    = true  # like -sr
+keep_padding       = false # like -kp
+end_of_line        = lf
+charset            = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[**.bats]
+indent_size = tab
+indent_style = tab
+shell_variant	= bats
