--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
       if: startsWith(runner.os, 'macOS')
       run: brew install parallel
     - name: Test code
+      shell: 'script -q -e -c "bash {0}"'
       run: test/run
 
   lint:
