adding --no-interaction to see if that will fix CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       if: startsWith(runner.os, 'macOS')
       run: brew install parallel
     - name: Test code
-      run: test/run
+      run: test/run --no-interaction
 
   lint:
     runs-on: ubuntu-latest
