--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,24 +3,21 @@ name: CI
 # Triggers the workflow on push or pull request events
 on: [push, pull_request]
 
+
 jobs:
-  bats-test:
+  test:
+    name: run bats tests
     strategy:
       matrix:
         os: [ubuntu-20.04, ubuntu-18.04, macos-10.15, macos-11]
-
     runs-on: ${{ matrix.os }}
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Install greadlink
-      if: startsWith(runner.os, 'macOS')
-      run: brew install coreutils
-    - name: Install parallel
-      if: startsWith(runner.os, 'macOS')
-      run: brew install parallel
-    - name: Test code
-      run: test/run --no-interaction
+      uses: actions/checkout@v2
+      - name: Run Bats tests
+        uses: ffurrer2/bats-action@v1
+        with:
+          community: docker-cli
+          args: ./test/run
 
   lint:
     runs-on: ubuntu-latest
