--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,6 @@ on: [push, pull_request]
 
 jobs:
   test:
-    name: run bats tests
     strategy:
       matrix:
         os: [ubuntu-20.04, ubuntu-18.04, macos-10.15, macos-11]
@@ -18,6 +17,24 @@ jobs:
         with:
           community: docker-cli
           args: ./test/run
+
+  bats-test:
+    strategy:
+      matrix:
+        os: [ubuntu-20.04, ubuntu-18.04, macos-10.15, macos-11]
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Install greadlink
+      if: startsWith(runner.os, 'macOS')
+      run: brew install coreutils
+    - name: Install parallel
+      if: startsWith(runner.os, 'macOS')
+      run: brew install parallel
+    - name: Test code
+      run: test/run
 
   lint:
     runs-on: ubuntu-latest
