--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,21 +3,7 @@ name: CI
 # Triggers the workflow on push or pull request events
 on: [push, pull_request]
 
-
 jobs:
-  test:
-    strategy:
-      matrix:
-        os: [ubuntu-20.04, ubuntu-18.04, macos-10.15, macos-11]
-    runs-on: ${{ matrix.os }}
-    steps:
-      uses: actions/checkout@v2
-      - name: Run Bats tests
-        uses: ffurrer2/bats-action@v1
-        with:
-          community: docker-cli
-          args: ./test/run
-
   bats-test:
     strategy:
       matrix:
@@ -34,6 +20,7 @@ jobs:
       if: startsWith(runner.os, 'macOS')
       run: brew install parallel
     - name: Test code
+      shell: 'script -q -e -c "bash {0}"'
       run: test/run
 
   lint:
