--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: CI
 
 # Triggers the workflow on push or pull request events
 on: [push, pull_request]
-
+fail-fast: false
 jobs:
   bats-test:
     strategy:
