--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,23 +2,16 @@ name: CI
 
 # Triggers the workflow on push or pull request events
 on: [push, pull_request]
-fail-fast: false
 jobs:
   bats-test:
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-18.04, macos-10.15, macos-11]
+        os: [ubuntu-18.04]
 
     runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v2
-    - name: Install greadlink
-      if: startsWith(runner.os, 'macOS')
-      run: brew install coreutils
-    - name: Install parallel
-      if: startsWith(runner.os, 'macOS')
-      run: brew install parallel
     - name: Test code
       shell: 'script -q -e -c "bash {0}"'
       run: test/run
