--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,12 @@ jobs:
   bats-test:
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04, macos-12, macos-11]
+        os: [ubuntu-20.04, ubuntu-18.04, macos-10.15, macos-11]
 
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v2
     - name: Install greadlink
       if: startsWith(runner.os, 'macOS')
       run: brew install coreutils
@@ -20,31 +20,27 @@ jobs:
       if: startsWith(runner.os, 'macOS')
       run: brew install parallel
     - name: Test code
+      shell: 'script -q -e -c "bash {0}"'
       run: test/run
 
   lint:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v2
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v2
       with:
-        go-version: 1.21.0
+        go-version: 1.17
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
         python-version: 3.8
     - name: Install shfmt
-      run: go install mvdan.cc/sh/v3/cmd/shfmt@latest
+      run: GO111MODULE=on go get mvdan.cc/sh/v3/cmd/shfmt
     - name: Install shellcheck
-      env:
-        scversion: stable # Or latest, vxx, etc
-      run: |
-        wget -qO- "https://github.com/koalaman/shellcheck/releases/download/${scversion?}/shellcheck-${scversion?}.linux.x86_64.tar.xz" | tar -xJv "shellcheck-${scversion}/shellcheck"
-        sudo cp "shellcheck-${scversion}/shellcheck" /usr/bin/
-        shellcheck --version
+      run: brew install shellcheck
     - name: Install pre-commit
-      run: python3 -m pip install -r test/lint-requirements.txt
+      run: python3 -m pip install pre-commit
     - name: Run lint
       run: pre-commit run --all-files
